crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@not_junction_fk_not_in_pk_other_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
assertion_line: 440
expression: rendered
---
export const other = pgTable("other", {
  id: integer("id").primaryKey(),
});

export const otherRelations = relations(other, ({ one, many }) => ({
  notJunction: many(notJunction),
}));
