crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@not_junction_fk_not_in_pk_other_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
model Other {
  id Int @id
  not_junction NotJunction[]

  @@map("other")
}
